@@ -1,1 +1,1 @@
-#define SERIALNUM "20011204_18"
+#define SERIALNUM "20011204_20"
