@@ -1,3 +1,8 @@
+*** 20011204_19 by db
+- oops. returned passwd instead of oper_reason for oper_reason
+
+
+
 *** 20011204_18 by db
 - closer to whats needed
 
